vendor/proc-macro-error-1.0.4/tests/ui/emit.stderr
error: emit!(span, from) test
 --> $DIR/emit.rs:4:7
  |
4 | emit!(one, two, three, four, five);
  |       ^^^

error: emit!(span, expr1, expr2) test
 --> $DIR/emit.rs:4:12
  |
4 | emit!(one, two, three, four, five);
  |            ^^^

error: emit!(span, single_expr) test
 --> $DIR/emit.rs:4:17
  |
4 | emit!(one, two, three, four, five);
  |                 ^^^^^

error: Diagnostic::emit() test
 --> $DIR/emit.rs:4:24
  |
4 | emit!(one, two, three, four, five);
  |                        ^^^^

error: emit_call_site_error!(expr) test
 --> $DIR/emit.rs:4:1
  |
4 | emit!(one, two, three, four, five);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: This is an error

  = note: simple note
  = help: simple help
  = help: simple hint
  = note: simple yay
  = note: format note
  = note: Some note
  = note: spanned simple note
  = note: spanned format note
  = note: Some note

 --> $DIR/emit.rs:5:13
  |
5 | emit_notes!(one, two);
  |             ^^^
