vendor/proc-macro-error-1.0.4/tests/ui/emit.rs
extern crate test_crate;
use test_crate::*;

emit!(one, two, three, four, five);
emit_notes!(one, two);

fn main() {}
